[package]
name = "qwikmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parse"
hardness = false
