[package]
name = "qwikmark"
version = "0.9.0"
edition = "2021"
default-run = "qmast"

[dependencies]
color-eyre = "0.6.2"
indexmap = "2.2.2"
nom = "7.1.3"
phf = { version = "0.11.2", features = ["macros"] }
rstest = "0.18.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parse"
harness = false

[profile.bench]
debug = true
